# blitzdb5

./: README.md  README.txt  _version.py  pyproject.toml  setup.py
.github/workflows/: auto-tag.yml  publish-to-pypi.yml
blitzdb/: __init__.py  _version.py
blitzdb/backends/file/: __init__.py  backend.py  utils.py
blitzdb/backends/mongo/: __init__.py  backend.py
blitzdb/backends/sql/: __init__.py  backend.py  queryset.py
blitzdb3.egg-info/: PKG-INFO  SOURCES.txt
blitzdb3_ce.egg-info/: PKG-INFO  SOURCES.txt
blitzdb4.egg-info/: PKG-INFO  SOURCES.txt
blitzdb5.egg-info/: PKG-INFO  SOURCES.txt
