[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blitzdb5"
description = "A document-oriented database written purely in Python."
readme = "README.md"
license = { text = "MIT" }
classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Topic :: Database"
]
dependencies = [
  "orjson"
]

[tool.setuptools_scm]
write_to = "/home/runner/work/blitzdb5/blitzdb5/_version.py"


